maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:51: error: not found: value sup
          if(sup<gauche && sup !=9999 && !aMurNord(k,l)){
             ^ShortestPathMaze:51: error: not found: value sup
          if(sup<gauche && sup !=9999 && !aMurNord(k,l)){
                           ^ShortestPathMaze:53: error: not found: value sup
            setIndication(k,l,sup+1)
                              ^ShortestPathMaze:56: error: value < is not a member of Unit
            if (gauche<sup && gauche != 9999 && !aMurOuest(k,l)) {
                      ^ShortestPathMaze:56: error: not found: value sup
            if (gauche<sup && gauche != 9999 && !aMurOuest(k,l)) {
                       ^ShortestPathMaze:57: error: type mismatch;
 found   : Int(1)
 required: String
              setIndication(k,l,gauche+1)
                                       ^